Fix surefire plugin issue under jdk 11